Added resume details and made side bar navigation a flex box

--- a/index.html
+++ b/index.html
@@ -18,47 +18,16 @@
         </header>
         <nav id="side-nav">
             <div id="side-nav-headers">
+                <a href="#">Interests</a>
                 <a href="#">Projects</a>
                 <a href="#">Education</a>
                 <a href="#">Work Experience</a>
-                <a href="#">Interests</a>
             </div>
             <div id="side-nav-timeline"></div>
         </nav>
         <main>
-            <section>
-                <h2>Projects</h2>
-                <div>
-                    <h3>blah</h3>
-                    <p>blah</p>
-                    <p>blah dates</p>
-                </div>
-                <div>
-                    <p>Description.....</p>
-                </div>
-            </section>
-            <section>
-                <h2>Education</h2>
-                <div>
-                    <h3>blah</h3>
-                    <p>blah</p>
-                    <p>blah dates</p>
-                </div>
-                <div>
-                    <p>Description.....</p>
-                </div>
-            </section>
-            <section>
-                <h2>Work Experience</h2>
-                <div>
-                    <h3>Cal Poly Humboldt RAMP, A Peer-Mentoring Program</h3>
-                    <p>Academic Mentor</p>
-                    <p>February 2020 - May 2021</p>
-                </div>
-                <div>
-                    <p>Description.....</p>
-                </div>
-            </section>
+
+
             <section>
                 <h2>Interests</h2>
                 <div>
@@ -70,6 +39,120 @@
                     <p>Description.....</p>
                 </div>
             </section>
+
+
+            <section>
+                <h2>Projects</h2>
+                <div>
+                    <h3>Independent Software Development</h3>
+                    <p>Full&ndash;Stack Developer</br>
+                    March 2020 &ndash; Current</p>
+                </div>
+                <div>
+                    <p>
+                        Learning new technology and developing software to stay up to date with
+                         industry</br>
+                        Using software development principles to formally organize my design
+                         documentation</br>
+                        Currently translating a virtual recipe box and calorie counting
+                         application developed in Java to a web-based application using
+                         JavaScript React</br>
+                        Working through post-planning development milestones for a life
+                         simulation game using Unity</br>
+                        Actively contributing to open-source repositories in C++, C#, and Java
+                    </p>
+                </div>
+                <div>
+                    <h3>Capstone Project</h3>
+                    <p>Front End Developer</br>
+                    October 2021 &ndash; December 2021</p>
+                </div>
+                <div>
+                    <p>
+                        Developed a space use logging application for Cal Poly Humboldt&apos;s
+                         Library building</br>
+                        Conducted requirements elicitation interview with client, then
+                         conducted regular meetings with client to discuss progress and
+                         reevaluate client needs</br>
+                        Applied agile software development techniques to work efficiently as a
+                         team and meet deadlines</br>
+                        Debugged throughout development using an issue ticketing system through
+                         a shared GitHub repository</br>
+                        Implemented unit testing and wrote documentation including the Software
+                         Requirements Specifications, Software Design Specifications, and
+                         Software Test Plan</br>
+                        Gained proficiency in XML, Xamarin and Xamarin.Forms framework for
+                         cross&ndash;platform compatibility</br>
+                    </p>
+                </div>
+                <div>
+                    <h3>Computer Science Club&apos;s Yearly Hackathon</h3>
+                    <p>Third Place Finalist</br>
+                    April 2019</p>
+                </div>
+                <div>
+                    <p>
+                        Designed and created data input system for local Humane Society using
+                         C++, HTML, CSS, and JavaScript</br>
+                        Collaborated as a team to divide workload and complete project goals
+                         within time limit</br>
+                        Effectively used external resources to learn new techniques and
+                         languages to meet project expectations
+                    </p>
+                </div>
+            </section>
+
+
+            <section>
+                <h2>Education</h2>
+                <div>
+                    <h3>Bachelor of Science, Computer Science</h3>
+                    <p>California Polytechnic State University Humboldt</br>
+                    Magna Cum Laude</br>
+                    May 2022</p>
+                </div>
+                <div>
+                    <h4>Notable Courses</h4>
+                    <ul>
+                        <li>Machine Learning</li>
+                        <li>Java Programming</li>
+                        <li>Software Engineering</li>
+                        <li>Telecommunications/Networks</li>
+                        <li>Web Apps w/ Databases</li>
+                        <li>Computer Security</li>
+                        <li>Personal Financial Management</li>
+                        <li>Speech Communications</li>
+                    </ul>
+                </div>
+            </section>
+
+
+            <section>
+                <h2>Work Experience</h2>
+                <div>
+                    <h3>Cal Poly Humboldt RAMP, A Peer-Mentoring Program</h3>
+                    <p>Academic Mentor</br>
+                    February 2020 &ndash; May 2021</p>
+                </div>
+                <div>
+                    <p>
+                        Worked with the Computer Science department faculty at HSU to provide
+                         academic mentoring to first&ndash;year CS and MATH students</br>
+                        Prepared agendas and talking points for monthly one-on-one Zoom meetings
+                         with 20&plus; students</br>
+                        Met with leads and staff weekly to discuss cases and share ideas.</br>
+                        Composed professional advising notes for faculty advisors following 
+                         meetings, while maintaining the privacy of mentees</br>
+                        Helped new students demonstrate a basic understanding of university
+                         policies and the resources that the university has to offer, and develop
+                         strong communication and time management skills</br>
+                        Collaborated with PBLC staff and CS faculty to design and conduct the
+                         first virtual Summer Immersion.
+                    </p>
+                </div>
+            </section>
+
+
         </main>
         <footer>
             <p class="footer">
