Added new work history, added links to GitHub page and to download resume as a PDF

--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@
 
             <section id="section4">
                 <h2>Work Experience</h2>
+                <h3>Humboldt IPA</h3>
+                <div class="resume-item-head-details">
+                    <p>Customer Service Representative</p>
+                    <p>April 2023 &ndash; Current</p>
+                </div>
+                <div class="resume-item-description">
+                    <p>Providing first line customer service, clerical support,
+                        appointment scheduling, and authorization processing</p>
+                    <p>Working within HIPPA guidelines to ensure patient
+                        confidentiality and protect trust in providers</p>
+                </div>
                 <h3>Cal Poly Humboldt RAMP, A Peer-Mentoring Program</h3>
                 <div class="resume-item-head-details">
                     <p>Academic Mentor</p>
@@ -164,6 +175,17 @@
                          conduct the first virtual Summer Immersion.</p>
                 </div>
             </section>
+
+
+            <div class="content-sticky-links">
+                <a  href="https://github.com/AutumnO" 
+                    rel="external" 
+                    target="_blank">View My GitHub</a>
+                <a  href="files/MyResumeMarch2023.pdf" 
+                    download="AutumnOsselloMarch2023Resume"
+                    target="_blank"
+                    type="application/pdf">Download Resume</a>
+            </div>
 
 
         </main>
