--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                 <a href="#section3">Education</a>
                 <a href="#section4">Work Experience</a>
             </div>
-            <div id="side-nav-timeline"></div>
+            <div id="side-nav-timeline">
+                <div id="side-nav-diamond"></div>
+            </div>
         </nav>
+        
         <main>
-
             <section>
                 <h2 id="about-me-header">Who am I?</h2>
                 <div class="about-me-text">
@@ -197,5 +199,7 @@
                 Created by Autumn Ossello. Last edited March 2023.
             </p>
         </footer>
+
+        <script type="text/javascript" src="scripts/index.js"></script>
     </body>
 </html>
