Updated Who Am I? section

--- a/index.html
+++ b/index.html
@@ -33,28 +33,32 @@
                 <h2 id="about-me-header">Who am I?</h2>
                 <div class="about-me-text">
                     <p>
-                        Autumn is a motivated software developer with a fullstack
-                        software education. She recently graduated from Cal Poly Humboldt
-                        with a bachelor's degree in Computer Science and is excited
-                        to gain experience working outside of education and begin 
-                        navigating the complex challenges of real-world product
-                        development and software maintenance.
+                        I am a Cal Poly Humboldt graduate with a degree in Computer Science,
+                        looking to gain experience working in either software development
+                        or project management. Since graduating I have continually developed
+                        my skills through personal stretch projects and opportunities in my
+                        current position. I am currently employed at Humboldt IPA, a third
+                        party administrator for health insurance. Although I am working
+                        outside of my field, I have leveraged my experience earning my
+                        degree to improve the workflows of our company.
                     </p>
                     <p>
-                        Since gradution Autumn has devoted herself to mastering diverse
-                        coding languages and staying up to date with software development
-                        research and techniques. Ultimately she would like to earn a
-                        master's degree, and until that time comes she aims to stay
-                        competitive, contribute to existing software, and advance her
-                        career through professional experience.
+                        I enjoy working with systems of organization. Code documentation
+                        is one form of this, but developing sustainable systems within
+                        all forms of work can be beneficial. In my current position there
+                        is a plethora of small pieces of information to remember. One of
+                        my first self-assigned projects came during a lull in my training.
+                        While I was waiting for my supervisor to catch up on her own work,
+                        I created a reference guide that would offload some of that memory 
+                        recall. It would also double as a training manual for anyone 
+                        moving into my position, something sorely missing during my 
+                        introduction period.
                     </p>
                     <p>
-                        Outside of working on her personal stretch project, Autumn enjoys
-                        working with her hands. She is often researching gardening topics,
-                        seeking new crochet projects, and looking for new meals to
-                        attempt in the kitchen. Once she has the means to attend further
-                        education, she would like to attend courses in Construction
-                        Technology to gain useful skills in home improvement.
+                        Outside of working on my personal stretch project, I enjoy
+                        working with my hands. I'm thoroughly enjoying learning the basics
+                        of woodworking at our local college. I also enjoy crocheting,
+                        gardening, and travel planning.
                     </p>
                 </div>
             </section>
@@ -196,7 +200,7 @@
                 Autumn Ossello</br>
                 Phone #: <a href="tel:7072347337">(707) 234 - 7337</a></br>
                 Email: <a href="mailto:aut.ossello@gmail.com">aut.ossello@gmail.com</a></br>
-                Created by Autumn Ossello. Last edited March 2023.
+                Created by Autumn Ossello. Last edited December 2024.
             </p>
         </footer>
 
