Added links to other pages and updated About Me section

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <h1>Autumn Ossello</h1>
             <nav id="header-nav">
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Arcade</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="tictactoe.html">Arcade</a></li>
+                    <li><a href="contactMe.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -22,6 +22,7 @@
                 <a href="#section2">Projects</a>
                 <a href="#section3">Education</a>
                 <a href="#section4">Work Experience</a>
+				<a href="#section5">References</a>
             </div>
             <div id="side-nav-timeline">
                 <div id="side-nav-diamond"></div>
@@ -40,25 +41,23 @@
                         current position. I am currently employed at Humboldt IPA, a third
                         party administrator for health insurance. Although I am working
                         outside of my field, I have leveraged my experience earning my
-                        degree to improve the workflows of our company.
+                        degree to improve the workflows of our company and keep myself
+						(somewhat) up to date with current developments in the industry. I
+						enjoy working for small companies that place high importance on
+						quality production. I find satisfaction in the challenge of
+						continual improvement, and in producing something I am proud to show 
+						others. 
                     </p>
                     <p>
-                        I enjoy working with systems of organization. Code documentation
-                        is one form of this, but developing sustainable systems within
-                        all forms of work can be beneficial. In my current position there
-                        is a plethora of small pieces of information to remember. One of
-                        my first self-assigned projects came during a lull in my training.
-                        While I was waiting for my supervisor to catch up on her own work,
-                        I created a reference guide that would offload some of that memory 
-                        recall. It would also double as a training manual for anyone 
-                        moving into my position, something sorely missing during my 
-                        introduction period.
-                    </p>
-                    <p>
-                        Outside of working on my personal stretch project, I enjoy
-                        working with my hands. I'm thoroughly enjoying learning the basics
-                        of woodworking at our local college. I also enjoy crocheting,
-                        gardening, and travel planning.
+                        Although time is limited now with a full-time job and other learning
+						opportunities, I continue working on my personal stretch project,
+						Imitatio. Currently modeled as a medieval life simulation game, I've
+						used its developmemt to hone my skills in multiple areas of game
+						design. The most challenging thus far is graphic design. Pixel art
+						is not easy! Outside of working on my personal stretch project, I 
+						enjoy working with my hands. I've been learning the basics of 
+						woodworking at our local college. I also enjoy crocheting gifts,
+                        gardening, and travel planning for myself and family.
                     </p>
                 </div>
             </section>
