Updated bullet points, added reference section

--- a/index.html
+++ b/index.html
@@ -151,10 +151,20 @@
                     <p>April 2023 &ndash; Current</p>
                 </div>
                 <div class="resume-item-description">
-                    <p>Providing first line customer service, clerical support,
-                        appointment scheduling, and authorization processing</p>
-                    <p>Working within HIPPA guidelines to ensure patient
-                        confidentiality and protect trust in providers</p>
+                    <p> Modernized employee resources alongside company upgrade 
+			to Microsoft 365, improving workflow of my position and 
+			those working on the same processes</p>
+		    <p> Explained health insurance policies to members and 
+			providers such as those relating to managed care, claims 
+			processing, credentialing, benefits and eligibility, and 
+			utilization management
+		    <p> Facilitated authorization processing, including determining 
+			medical necessity per medical guidelines for services such 
+			as CPAP devices and supplies, assisting RNs and MD in 
+			obtaining information, and processing every authorization 
+			decision through logging and notifying the providers and 
+			member</p>
+
                 </div>
                 <h3>Cal Poly Humboldt RAMP, A Peer-Mentoring Program</h3>
                 <div class="resume-item-head-details">
@@ -176,8 +186,17 @@
                          university policies and the resources that the university
                          has to offer, and develop strong communication and time
                          management skills</p>
-                    <p>Collaborated with PBLC staff and CS faculty to design and
-                         conduct the first virtual Summer Immersion.</p>
+                </div>
+            </section>
+
+	    <section id="section5">
+                <h2>References</h2>
+                <h3>Rosemary DenOuden, CEO</h3>
+                <div class="resume-item-head-details">
+                    <p>Humboldt IPA</p>
+                </div>
+                <div class="resume-item-description">
+                    <a href="files/RD_LetterOfRecommendation.pdf">Letter of Recommendation</a>
                 </div>
             </section>
 
@@ -186,8 +205,8 @@
                 <a  href="https://github.com/AutumnO" 
                     rel="external" 
                     target="_blank">View My GitHub</a>
-                <a  href="files/MyResumeMarch2023.pdf" 
-                    download="AutumnOsselloMarch2023Resume"
+                <a  href="files/CurrentResume.pdf" 
+                    download="AutumnOsselloDec2024Resume"
                     target="_blank"
                     type="application/pdf">Download Resume</a>
             </div>
